# vidify-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindDBus.cmake  FindDbus.cmake  FindGLIB.cmake  FindLibVLC.cmake
lib/: player.cpp  player.h
src/: config.cpp  config.h  config.hpp  main.cpp
src/api/: linux.h  linux.hpp
src/player/: vlc.cpp  vlc.hpp
