CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(Spotify-videoclips-cpp VERSION 1.0.0)
SET(CMAKE_CXX_STANDARD 17)
LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

FIND_PACKAGE(LIBVLC REQUIRED)
INCLUDE_DIRECTORIES("${LIBVLC_INCLUDE_DIR}")
SET(SOURCE_FILES
                src/main.cpp
                lib/player.cpp)

ADD_EXECUTABLE(spotify_videoclips ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(spotify_videoclips ${LIBVLC_LIBRARY})
